# NewsBot

./: .gitignore  .gitmodules  Pipfile  README.md  __main__.py  config.sh  database_setup.py  environment.example.py  example.env  newsbot.service  pyproject.toml  requirements.txt  scrapy.cfg  setup.py  setup.sh  setup_venv.sh
NewsBot/: db_connection_loader.py  log_formatter.py  logger.py  settings.py
NewsBot/db_connections/: db_connection.py  emailed_items_db_connection.py  web_page_history_db_connection.py
NewsBot/exceptions/: __init__.py
NewsBot/item_pipelines/: __init__.py  datetime_cruncher.py  dispatch_audio_downloader.py  dispatch_datetime_cruncher.py  dispatch_emailer.py  email.template.html  emailed_item_filter.py  emailed_item_recorder.py  file_downloader.py  item_emailer.py  item_pipeline.py
NewsBot/items/: FrontierInvestigationFiling.template.html  __init__.py  dated_item.py  dispatch.py  emailable_item.py  emailable_item_with_attachments.py  frontier_investigation_filing.py  item_with_files.py  self_serializing_item.py  web_element.py
NewsBot/spiders/: __init__.py  dispatch_call_log_spider.py  frontier_investigation_spider.py  self_scheduling_spider.py  (+1 more)
new-newsbot/: logger.py
newsbot/: concrete_subclass_loader.py  db_builder.py  db_connection_loader.py  log_formatter.py  logger.py  settings.py
newsbot_tasking/: __init__.py  crawl_job.py  job_registry.py
scripts/: add_email_subscription.py  set_up_default_email_recipient.py  set_up_moab_news_sources.py
src/: __main__.py  example.env  requirements.txt  setup.py  setup.sh
test/: test_main.py
(+139 files in other folders)
